--- a/Pixel Pathways/index.html
+++ b/Pixel Pathways/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pixel Pathways - Digital Learning</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body class="bg-light" data-theme="default">
